.infrastructure/local/ingress/01-ingress-class.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-ingress
  labels:
    app: nginx-ingress
    component: ingress
spec:
  controller: nginx.org/ingress-controller
