.infrastructure/local/ingress/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: nginx-ingress
    component: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-ingress
  tls:
    - hosts:
        - ec.local
      secretName: ingress-tls-secret
  rules:
    - host: ec.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /adminer
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 80
